--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,30 +16,30 @@
         android:layout_height="wrap_content"
         android:text="PERFECTA"
         android:typeface="serif"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
         android:textSize="50sp"
         android:textColor="#0b76bc"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignStart="@+id/textView2" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SEARCH"
         android:id="@+id/searchButton"
-        android:layout_marginBottom="66dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:background="#0b76bc"
         android:textSize="30sp"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
-        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -55,33 +55,30 @@
         android:textColor="#0b76bc"
         android:textAlignment="center" />
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="120dp"
-        android:id="@+id/imageView"
-        android:background="@drawable/celltower"
-        android:backgroundTint="#0b76bc"
-        android:layout_centerVertical="true"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="LOCATION:"
+        android:id="@+id/locationView"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:textSize="15sp"
+        android:textColor="#2fff00"
+        android:textAlignment="center" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/searchButton"
+        android:layout_below="@+id/locationView" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignTop="@+id/listView"
         android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="100dp"
-        android:id="@+id/imageView2"
-        android:background="@drawable/location"
-        android:backgroundTint="#0b76bc"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignStart="@+id/textView2" />
-
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="100dp"
-        android:id="@+id/imageView3"
-        android:background="@drawable/wifi"
-        android:backgroundTint="#0b76bc"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
 
 </RelativeLayout>
